--- a/Assessment/test-output/old/Assessment/methods.html
+++ b/Assessment/test-output/old/Assessment/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Assessment</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:54:09</td>   <td>0</td> <td title="&gt;&gt;TC_01Test.setUp()[pri:0, instance:assessmentpackage.TC_01Test@50ad3bc1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27362884</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:54:23</td>   <td>14837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01Test.validate_search_button()[pri:1, instance:assessmentpackage.TC_01Test@50ad3bc1]">validate_search_button</td> 
-  <td>main@27362884</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:54:44</td>   <td>35628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01Test.validate_cart()[pri:2, instance:assessmentpackage.TC_01Test@50ad3bc1]">validate_cart</td> 
-  <td>main@27362884</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:55:20</td>   <td>71682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01Test.validate_removeitems()[pri:3, instance:assessmentpackage.TC_01Test@50ad3bc1]">validate_removeitems</td> 
-  <td>main@27362884</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:55:24</td>   <td>75217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01Test.validate_chkout()[pri:4, instance:assessmentpackage.TC_01Test@50ad3bc1]">validate_chkout</td> 
-  <td>main@27362884</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>20/11/23 14:55:29</td>   <td>80516</td> <td title="&lt;&lt;TC_01Test.driverquit()[pri:0, instance:assessmentpackage.TC_01Test@50ad3bc1]">&lt;&lt;driverquit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27362884</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>20/11/23 20:30:16</td>   <td>0</td> <td title="&gt;&gt;TC_02Test.setUp()[pri:0, instance:assessmentpackage.TC_02Test@3059cbc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947896119</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>20/11/23 20:31:03</td>   <td>47128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02Test.validate_error_msg()[pri:0, instance:assessmentpackage.TC_02Test@3059cbc]">validate_error_msg</td> 
+  <td>main@1947896119</td>   <td></td> </tr>
+<tr bgcolor="a365b8">  <td>20/11/23 20:31:17</td>   <td>60641</td> <td title="&lt;&lt;TC_02Test.tearDown()[pri:0, instance:assessmentpackage.TC_02Test@3059cbc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947896119</td>   <td></td> </tr>
 </table>
