--- a/Assessment/test-output/emailable-report.html
+++ b/Assessment/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Assessment</th></tr>
-<tr><td><a href="#t0">Login and create account error message</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,883</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Login and create account error message</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">17,761</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Assessment</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login and create account error message &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">assessmentpackage.TC_02Test</td><td><a href="#m0">validate_error_msg</a></td><td rowspan="1">1606143663538</td><td rowspan="1">12808</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Assessment</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login and create account error message &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">assessmentpackage.TC_02Test</td><td><a href="#m0">validate_error_msg</a></td><td rowspan="1">1606149336164</td><td rowspan="1">17609</td></tr></tbody>
 </table>
-<h2>Login and create account error message</h2><h3 id="m0">assessmentpackage.TC_02Test#validate_error_msg</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Error message is displayed when email ID is invalid during sign in expected [false] but found [true]
-	at assessmentpackage.login_signup_bug.validate_error_message(login_signup_bug.java:82)
+<h2>Login and create account error message</h2><h3 id="m0">assessmentpackage.TC_02Test#validate_error_msg</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Error message is displayed when email ID is invalid while creating an account expected [true] but found [false]
+	at assessmentpackage.login_signup_bug.validate_error_message(login_signup_bug.java:79)
 	at assessmentpackage.TC_02Test.validate_error_msg(TC_02Test.java:20)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
